# five

./: README.md
a/: atric-usb-driver_0.0.2-0easyVDR1~focal.tar.xz
d/: dfatmo_0.5.0~git20170718.orig.tar.xz
e/: easyvdr-addon-netradio-sd_1.0.2.orig.tar.xz  easyvdr-addon-netradio-sd_1.0.3.orig.tar.xz  easyvdr-addon-netradio_1.0.1.orig.tar.xz
e/easyvdr-addon-program-changer-0.6.0/program-changer-0.5.6/src/: Makefile.am  Makefile.in  error.c  error.h  hotkey.c  mouse.c  mouse.h  pconfig.c  pconfig.h  program-changer.c  program-changer.h  remote.c  remote.h  tools.c  tools.h
e/easyvdr-addon-program-changer-0.6.0/program-changer-setup-0.5.6/src/: Makefile  Makefile.am  Makefile.in  hotkey.c  hotkey.h  make_lirc_conf_files.c  make_lirc_conf_files.h  message_and_error_log.c  message_and_error_log.h  parameter.h  program-changer-setup.c  program-changer-setup.h  tools.c  tools.h
e/easyvdr-addon-view-picture-0.2.0/: Makefile.am  Makefile.in  configure  configure.ac
e/easyvdr-addon-view-picture-0.2.0/debian/: changelog  control  install
e/easyvdr-addon-view-picture-0.2.0/src/: Makefile.am  Makefile.in  view-picture.c
e/easyvdr-hdet-0.0.3/hdet/: Makefile  Makefile.add  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.in  db_version.h  hdet  hdet.c  hdet.h  list.h  tools.c  tools.h
e/easyvdr-hdet-0.0.3/hdet/.deps/: hdet-hdet.Po  hdet-tools.Po
e/easyvdr-make-remote-mapping-0.1.0/: Makefile.am  Makefile.in  configure  configure.ac
e/easyvdr-make-remote-mapping-0.1.0/debian/: changelog  control  copyright  files  install
e/easyvdr-make-remote-mapping-0.1.0/scripts/: disable-poweroff-remote-conf  easyvdr-make-remote-mapping  easyvdr-make-remote-mapping.dead  enable-poweroff-program-changer  restore-poweroff
e/easyvdr-make-remote-mapping-0.1.0/src/: Makefile.am  Makefile.in  make-remote-mapping.cc
f/: fonts-opensans_1.0.orig.tar.xz  fonts-sourcesanspro_1.0.0.orig.tar.xz  fonts-vdropensans_1.0.0.orig.tar.xz
g/: graphlcd-base_0.3.0+git20131104-touchcol.orig.tar.bz2
l/: libmcli_189.orig.tar.xz  lighttpd_1.4.53.orig.tar.xz.asc  linuxtv-dvb-apps_1.1.1+rev1500.orig.tar.bz2
p/: partman-base_199ubuntu1.3.tar.xz  project-x_0.91.0.orig.tar.xz
r/: roxterm_3.9.3.orig.tar.xz
s/: serdisplib_2.01+svn20180211.orig.tar.xz
s/serdisplib-2.01+svn20180211/: 90-libserdisp.rules  AUTHORS  HISTORY  Makefile.in  README  config.h.in  configure  configure.in  serdisplib.pc.in  serdisplib.spec.in
s/serdisplib-2.01+svn20180211/DOCS/: Doxyfile.in
s/serdisplib-2.01+svn20180211/DOCS/archived/: fontbig.css  fontprint.css  fontsmall.css  fontstd.css  index_v1.92.html  index_v1.94.html  index_v1.95.html  index_v1.97.html  sd2.css
s/serdisplib-2.01+svn20180211/DOCS/txt/: example1.txt  example2.txt  example3.txt  html_header.txt  mainpage.txt  serdisplib.css
s/serdisplib-2.01+svn20180211/buildfiles/templates/: serdisplib_TEMPLATE.bb
s/serdisplib-2.01+svn20180211/debian/: changelog  control  copyright  libserdisp-dev.doc-base  libserdisp1.docs  libserdisp1.install  rules  watch
s/serdisplib-2.01+svn20180211/include/serdisplib/: serdisp_connect.h  serdisp_connect_net.h  serdisp_control.h.in
s/serdisplib-2.01+svn20180211/server/: Makefile.in  args.c  args.h  commands.c  commands.h  conf.c  conf.h  connections.c  connections.h  lcds.c  lcds.h  lirc.c  lirc.h  rc5trans.c  rc5trans.h  serdispd.c  serdisplearn.c  serdispproxy.c
s/serdisplib-2.01+svn20180211/server/examples/: serdispd.cfg
s/serdisplib-2.01+svn20180211/src/: Makefile.in  serdisp_colour.c  serdisp_connect.c  serdisp_connect_net.c  serdisp_connect_srv.c  serdisp_connect_usb.c  serdisp_control.c  serdisp_fctptr.c  serdisp_gpevents.c  serdisp_proccmd.c  serdisp_specific_acoolsdcm.c  serdisp_specific_ddusbt.c  serdisp_specific_directgfx.c  serdisp_specific_displaylink.c  serdisp_specific_dpfax.c  serdisp_specific_framebuffer.c  serdisp_specific_glcd2usb.c  serdisp_specific_i2c.c  serdisp_specific_ks0108.c  serdisp_specific_l4m.c  serdisp_specific_lc7981.c  serdisp_specific_lh155.c  serdisp_specific_nokcol.c  serdisp_specific_pcd8544.c  serdisp_specific_remote.c  serdisp_specific_rs232.c  serdisp_specific_sed133x.c  serdisp_specific_sed153x.c  serdisp_specific_sed156x.c  serdisp_specific_ssdoled.c  serdisp_specific_stv8105.c  serdisp_specific_t6963.c  serdisp_specific_vssdcp.c  serdisp_srvtools.c  serdisp_tools.c  testserdisp.c
s/serdisplib-2.01+svn20180211/tools/: Makefile.in  common.c  common.h  image.c  l4m132c_tool.c  l4m320t_tool.c  multidisplay.c  touchscreen_tool.c
t/: t2scan_0.5.orig.tar.xz  t2scan_0.6~git20200518.orig.tar.xz  transcode_1.1.7.orig.tar.bz2
u/: keyring.sh  ubuntu-keyring_2018.09.18.1~18.04.1.dsc
v/: skindesignerapi_1.2.1.orig.tar.xz  vdr-epg-daemon_1.1.126~git20180103.orig.tar.xz  vdr-plugin-audiorecorder_2.0.0rc5+git20141110.orig.tar.xz  vdr-plugin-avards_0.2.5.orig.tar.bz2  vdr-plugin-boblight_0.0.6+git20150518.orig.tar.xz  vdr-plugin-burn_0.2.2-8easyVDR0~focal.debian.tar.xz  (+73 more)
y/yard2tools-1.2.4/: .gitignore  ChangeLog  Command_Defines.h  Makefile.am  Makefile.in  Readme.txt  _input_h_KeybIDs.txt  config.h.in  configure  configure.ac  getVersion.sh  global_config.h  lirctest.c  lirctest.h  util.c  util.h  yard2config.c  yard2config.h  yard2lcdtest.c  yard2lcdtest.h  yard2record.c  yard2record.h  yard2srvd.c  yard2srvd.h  yard2srvd.ini.def  yard2wakeup.c  yard2wakeup.h
y/yard2tools-1.2.4/LCDproc/: yard2_LCDproc_057.txt  yard2patch.txt
y/yard2tools-1.2.4/LCDproc/Server/drivers/: yard2LCD.c
y/yard2tools-1.2.4/addon/: 60-usb-yard2.rules  Makefile.am  Makefile.in  S90.yard2-wakeup  vdr-addon-yard2wakeup.conf  yard2tools.cfg
y/yard2tools-1.2.4/debian/: changelog  control  copyright  postinst  preinst
y/yard2tools-1.2.4/lirc/: readme.txt  yard2_lirc.patch  yard2_lircd_091b_patch.txt
y/yard2tools-1.2.4/lirc/daemons/: hw_yard2.c  hw_yard2.h
y/yard2tools-1.2.4/lirc/remotes/yard/: lircd.conf.yard2
y/yard2tools-1.2.4/yard2flash/: Makefile.am  Makefile.in  README  fsusb.c  fsusb.h  getline.c  getline.h  main.c  memimg.c  memimg.h  rjlhex.c
(+9723 files in other folders)
