dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(view-picture, 0.2)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CC


AC_PROG_CPP
AC_PROG_CXX





LT_INIT



PKG_CHECK_MODULES(VIEW_PICTURE, [gtk+-3.0 ])




AC_OUTPUT([
Makefile
src/Makefile

])
